base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-deployment
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          imagePullPolicy: Always
          image: thawatchaik/nginx-demo
          ports:
            - containerPort: 80
