base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-web-service
spec:
  type: LoadBalancer
  selector:
    app: my-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
